--- a/contact.html
+++ b/contact.html
@@ -1018,7 +1018,7 @@ body {
         <div class="about-section">
             <h2 class="section-title">नकाशा (Location)</h2>
             <div class="map-responsive">
-                <iframe src="MapLink" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3833.71777100306!2d74.33696065!3d16.08012885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc08437ef62578b%3A0xeb9f587b6a6a49f!2sShippur%20Tarf%20Nesari%2C%20Maharashtra%20416504!5e0!3m2!1sen!2sin!4v1767067165208!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="about-section text-center">
